--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -49,3 +49,6 @@ jobs:
           [ ! -d "node_modules" ] && $MANAGER install --frozen-lockfile
           [[ "$BUILD" = "true" ]] && $MANAGER run build
           [[ "$MANAGER" = "bun" ]] && npm publish --provenance --access public --no-git-checks --tag $TAG || $MANAGER publish --provenance --access public --no-git-checks --tag $TAG
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
