chore: tweaks to canary.yml ~ 1 file 5+ 5-
.github/workflows/canary.yml

--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -44,11 +44,11 @@ jobs:
           [[ "$BUILD" = "true" ]] && $MANAGER run build
 
           # Publish package
-          if [ "$MANAGER" = "bun" ]; then
-            npm publish --provenance --access public --no-git-checks --tag $TAG
-          else
-            $MANAGER publish --provenance --access public --no-git-checks --tag $TAG
-          fi
+          # if [ "$MANAGER" = "bun" ]; then
+          npm publish --provenance --access public --no-git-checks --tag $TAG
+          # else
+          #   $MANAGER publish --provenance --access public --no-git-checks --tag $TAG
+          # fi
         env:
           TAG: canary
           MANAGER: bun
