--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -40,6 +40,8 @@ jobs:
           TAGGED_VERSION=$(echo $VERSIONS | $RUNNER json $TAG)
           NEXT_VERSION=$(if [[ $TAGGED_VERSION == $NEXT_VERSION* ]]; then $RUNNER semver $TAGGED_VERSION -i prerelease; else echo $NEXT_VERSION-$TAG.0; fi)
           $RUNNER json -I -f package.json -e "this.version=\"$NEXT_VERSION\""
+
+          # Install dependencies and build package
           [ ! -d "node_modules" ] && $MANAGER install --frozen-lockfile
           [[ "$BUILD" = "true" ]] && $MANAGER run build
 
