--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -34,8 +34,6 @@ jobs:
 
       - name: Release Package
         run: |
-          $PRECMD
-
           PACKAGE_NAME=$($RUNNER json -f package.json -a name)
           VERSIONS=$(npm view $PACKAGE_NAME dist-tags --json)
           LATEST_VERSION=$(echo $VERSIONS | $RUNNER json latest)
@@ -43,6 +41,10 @@ jobs:
           TAGGED_VERSION=$(echo $VERSIONS | $RUNNER json $TAG)
           NEXT_VERSION=$(if [[ $TAGGED_VERSION == $NEXT_VERSION* ]]; then $RUNNER semver $TAGGED_VERSION -i prerelease; else echo $NEXT_VERSION-$TAG.0; fi)
           $RUNNER json -I -f package.json -e "this.version=\"$NEXT_VERSION\""
+
+          # Install dependencies and build package
+          [ ! -d "node_modules" ] && $MANAGER install --frozen-lockfile
+          [[ "$BUILD" = "true" ]] && $MANAGER run build
 
           # Publish package
           # if [ "$MANAGER" = "bun" ]; then
@@ -54,5 +56,5 @@ jobs:
           TAG: canary
           MANAGER: bun
           RUNNER: bunx
-          PRECMD: bun install --frozen-lockfile && bun run build
+          BUILD: true
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
