--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "the-typescript-starter",
-  "version": "0.0.6",
+  "version": "0.1.0-canary.69",
   "description": "the-typescript-starter",
   "keywords": [],
   "homepage": "https://github.com/nrjdalal/the-typescript-starter#readme",
