--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -37,27 +37,19 @@ jobs:
       - name: Release Package
         run: |
           npm i -g @antfu/ni
-
           PACKAGE_NAME=$(nlx json -f package.json -a name)
           PACKAGE_VERSION=$(nlx json -f package.json -a version)
           VERSIONS=$(npm view $PACKAGE_NAME dist-tags --json)
           LATEST_VERSION=$(echo $VERSIONS | nlx json latest)
-
           if [[ $PACKAGE_VERSION != $LATEST_VERSION ]]; then
             NEXT_VERSION=$PACKAGE_VERSION
-            if [[ $PACKAGE_VERSION =~ [a-zA-Z] ]]; then
-              TAG=$(echo $PACKAGE_VERSION | grep -o '[a-zA-Z]*' | head -n 1)
-            else
-              TAG="latest"
-            fi
+            TAG=$(echo $PACKAGE_VERSION | grep -o '[a-zA-Z]*' | head -n 1 || echo "latest")
           else
             NEXT_VERSION=$(nlx semver $LATEST_VERSION -i minor)
             TAGGED_VERSION=$(echo $VERSIONS | nlx json $TAG)
             NEXT_VERSION=$(if [[ $TAGGED_VERSION == $NEXT_VERSION* ]]; then nlx semver $TAGGED_VERSION -i prerelease; else echo $NEXT_VERSION-$TAG.0; fi)
           fi
-
           nlx json -I -f package.json -e "this.version=\"$NEXT_VERSION\""
-
           [ ! -d "node_modules" ] && ni --frozen
           [[ "$BUILD" = "true" ]] && nr build
           npm publish --provenance --access public --no-git-checks --tag $TAG
