--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -46,6 +46,7 @@ jobs:
             HAS_TAG=$(echo $PACKAGE_VERSION | grep -o '[a-zA-Z]*' | head -n 1)
             TAG=$([[ -n "$HAS_TAG" ]] && echo $HAS_TAG || echo "latest")
           else
+            TAG="canary"
             NEXT_VERSION=$(nlx semver $LATEST_VERSION -i minor)
             TAGGED_VERSION=$(echo $VERSIONS | nlx json $TAG)
             NEXT_VERSION=$([[ $TAGGED_VERSION == $NEXT_VERSION* ]] && nlx semver $TAGGED_VERSION -i prerelease || echo $NEXT_VERSION-$TAG.0)
@@ -55,6 +56,5 @@ jobs:
           [[ "$BUILD" = "true" ]] && nr build
           npm publish --provenance --access public --no-git-checks --tag $TAG
         env:
-          TAG: canary
           BUILD: true
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
