--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -48,16 +48,29 @@ jobs:
           VERSIONS=$(npm view $PACKAGE_NAME dist-tags --json)
           LATEST_VERSION=$(echo $VERSIONS | nlx json latest)
           if [[ $PACKAGE_VERSION != $LATEST_VERSION ]]; then
-            NEXT_VERSION=$PACKAGE_VERSION
+            RELEASE_VERSION=$PACKAGE_VERSION
             HAS_TAG=$(echo $PACKAGE_VERSION | grep -o '[a-zA-Z]*' | head -n 1)
             TAG=$([[ -n "$HAS_TAG" ]] && echo $HAS_TAG || echo "latest")
           else
             TAG="canary"
-            NEXT_VERSION=$(nlx semver $LATEST_VERSION -i minor)
+            RELEASE_VERSION=$(nlx semver $LATEST_VERSION -i minor)
             TAGGED_VERSION=$(echo $VERSIONS | nlx json $TAG)
-            NEXT_VERSION=$([[ $TAGGED_VERSION == $NEXT_VERSION* ]] && nlx semver $TAGGED_VERSION -i prerelease || echo $NEXT_VERSION-$TAG.0)
+            RELEASE_VERSION=$([[ $TAGGED_VERSION == $RELEASE_VERSION* ]] && nlx semver $TAGGED_VERSION -i prerelease || echo $RELEASE_VERSION-$TAG.0)
           fi
-          nlx json -I -f package.json -e "this.version=\"$NEXT_VERSION\""
+          nlx json -I -f package.json -e "this.version=\"$RELEASE_VERSION\""
           npm publish --provenance --access public --no-git-checks --tag $TAG
+          PACKAGE_URL="https://www.npmjs.com/package/$PACKAGE_NAME/v/$RELEASE_VERSION"
+          curl -L \
+            -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            "https://api.github.com/repos/$GITHUB_REPOSITORY/commits/$GITHUB_SHA/comments" \
+            -d "{\"body\": \"Package released - [\`$PACKAGE_NAME@$RELEASE_VERSION\`]($PACKAGE_URL)\"}"
+          curl -L \
+            -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            "https://api.github.com/repos/$GITHUB_REPOSITORY/statuses/$GITHUB_SHA" \
+            -d "{\"state\": \"success\", \"context\": \"Package released\", \"description\": \"$PACKAGE_NAME@$RELEASE_VERSION\", \"target_url\": \"$PACKAGE_URL\"}"
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
