--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -12,7 +12,7 @@ concurrency:
 permissions:
   id-token: write
   contents: write
-  # statuses: write
+  statuses: write
 
 jobs:
   release:
@@ -63,9 +63,9 @@ jobs:
           curl -fsSL -X POST -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/$GITHUB_REPOSITORY/commits/$GITHUB_SHA/comments" \
             -d "{\"body\": \"Package released - [\`$PACKAGE_NAME@$RELEASE_VERSION\`]($PACKAGE_URL)\"}" >/dev/null \
             && echo "🟢 Release comment added!" || echo "🔴 Failed to add release comment."
-          # Add release status
+          # Update release status
           curl -fsSL -X POST -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/$GITHUB_REPOSITORY/statuses/$GITHUB_SHA" \
             -d "{\"state\": \"success\", \"context\": \"Package released\", \"description\": \"$PACKAGE_NAME@$RELEASE_VERSION\", \"target_url\": \"$PACKAGE_URL\"}" >/dev/null \
-            && echo "🟢 Release status added!" || echo "🔴 Failed to add release status."
+            && echo "🟢 Release status updated!" || echo "🔴 Failed to update release status."
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
