--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+  issue_comment:
+    types: [created]
 
 concurrency:
   cancel-in-progress: true
@@ -16,6 +18,7 @@ permissions:
 
 jobs:
   release:
+    if: github.event_name == 'push' || (github.event_name == 'issue_comment' && contains(github.event.comment.body, 'release'))
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
