chore: tweaks to canary.yml ~ 1 file 16+ 8-
.github/workflows/canary.yml

--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -62,13 +62,21 @@ jobs:
           npx json -I -f package.json -e "this.version=\"$RELEASE_VERSION\""
           npm publish --provenance --access public --no-git-checks --tag $TAG
           PACKAGE_URL="https://www.npmjs.com/package/$PACKAGE_NAME/v/$RELEASE_VERSION"
-          # Add release comment
-          curl -fsSL -X POST -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/$GITHUB_REPOSITORY/commits/$GITHUB_SHA/comments" \
-            -d "{\"body\": \"Package released - [\`$PACKAGE_NAME@$RELEASE_VERSION\`]($PACKAGE_URL)\"}" >/dev/null \
-            && echo "🟢 Release comment added!" || echo "🔴 Failed to add release comment."
-          # Update release status
-          curl -fsSL -X POST -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/$GITHUB_REPOSITORY/statuses/$GITHUB_SHA" \
-            -d "{\"state\": \"success\", \"context\": \"Package released\", \"description\": \"$PACKAGE_NAME@$RELEASE_VERSION\", \"target_url\": \"$PACKAGE_URL\"}" >/dev/null \
-            && echo "🟢 Release status updated!" || echo "🔴 Failed to update release status."
+          if [[ $GITHUB_EVENT_NAME == 'push' ]]; then
+            # Add release comment
+            curl -fsSL -X POST -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/$GITHUB_REPOSITORY/commits/$GITHUB_SHA/comments" \
+              -d "{\"body\": \"Package released - [\`$PACKAGE_NAME@$RELEASE_VERSION\`]($PACKAGE_URL)\"}" >/dev/null \
+              && echo "🟢 Release comment added!" || echo "🔴 Failed to add release comment."
+            # Update release status
+            curl -fsSL -X POST -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/$GITHUB_REPOSITORY/statuses/$GITHUB_SHA" \
+              -d "{\"state\": \"success\", \"context\": \"Package released\", \"description\": \"$PACKAGE_NAME@$RELEASE_VERSION\", \"target_url\": \"$PACKAGE_URL\"}" >/dev/null \
+              && echo "🟢 Release status updated!" || echo "🔴 Failed to update release status."
+          elif [[ $GITHUB_EVENT_NAME == 'issue_comment' ]]; then
+            # Add release comment to PR
+            PR_NUMBER=$(jq --raw-output .issue.pull_request.url "$GITHUB_EVENT_PATH" | grep -o '[0-9]*$')
+            curl -fsSL -X POST -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/$GITHUB_REPOSITORY/issues/$PR_NUMBER/comments" \
+              -d "{\"body\": \"Package released - [\`$PACKAGE_NAME@$RELEASE_VERSION\`]($PACKAGE_URL)\"}" >/dev/null \
+              && echo "🟢 Release comment added to PR!" || echo "🔴 Failed to add release comment to PR."
+          fi
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
