--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -73,7 +73,7 @@ jobs:
               && echo "🟢 Release status updated!" || echo "🔴 Failed to update release status."
           elif [[ $GITHUB_EVENT_NAME == 'issue_comment' ]]; then
             # Add release comment to PR
-            PR_NUMBER=$(jq --raw-output .issue.pull_request.url "$GITHUB_EVENT_PATH" | grep -o '[0-9]*$')
+            PR_NUMBER=$(echo "${{ github.event.issue.pull_request.url }}" | grep -o '[0-9]*$')
             curl -fsSL -X POST -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/$GITHUB_REPOSITORY/issues/$PR_NUMBER/comments" \
               -d "{\"body\": \"Package released - [\`$PACKAGE_NAME@$RELEASE_VERSION\`]($PACKAGE_URL)\"}" >/dev/null \
               && echo "🟢 Release comment added to PR!" || echo "🔴 Failed to add release comment to PR."
