--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -19,7 +19,7 @@ permissions:
 
 jobs:
   release:
-    if: github.event_name == 'push' || (github.event_name == 'issue_comment' && contains(github.event.comment.body, 'release') && github.event.comment.user.type == 'Owner')
+    if: github.event_name == 'push' || (github.event_name == 'issue_comment' && contains(github.event.comment.body, 'release'))
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
