--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -46,21 +46,21 @@ jobs:
 
       - name: Release Package
         run: |
-          PACKAGE_NAME=$(npx json -f package.json -a name)
-          PACKAGE_VERSION=$(npx json -f package.json -a version)
+          PACKAGE_NAME=$(bunx json -f package.json -a name)
+          PACKAGE_VERSION=$(bunx json -f package.json -a version)
           VERSIONS=$(npm view $PACKAGE_NAME dist-tags --json)
-          LATEST_VERSION=$(echo $VERSIONS | npx json latest)
+          LATEST_VERSION=$(echo $VERSIONS | bunx json latest)
           if [[ $PACKAGE_VERSION != $LATEST_VERSION ]]; then
             RELEASE_VERSION=$PACKAGE_VERSION
             HAS_TAG=$(echo $PACKAGE_VERSION | grep -o '[a-zA-Z]*' | head -n 1)
             TAG=$([[ -n "$HAS_TAG" ]] && echo $HAS_TAG || echo "latest")
           else
             TAG="canary"
-            RELEASE_VERSION=$(npx semver $LATEST_VERSION -i minor)
-            TAGGED_VERSION=$(echo $VERSIONS | npx json $TAG)
-            RELEASE_VERSION=$([[ $TAGGED_VERSION == $RELEASE_VERSION* ]] && npx semver $TAGGED_VERSION -i prerelease || echo $RELEASE_VERSION-$TAG.0)
+            RELEASE_VERSION=$(bunx semver $LATEST_VERSION -i minor)
+            TAGGED_VERSION=$(echo $VERSIONS | bunx json $TAG)
+            RELEASE_VERSION=$([[ $TAGGED_VERSION == $RELEASE_VERSION* ]] && bunx semver $TAGGED_VERSION -i prerelease || echo $RELEASE_VERSION-$TAG.0)
           fi
-          npx json -I -f package.json -e "this.version=\"$RELEASE_VERSION\""
+          bunx json -I -f package.json -e "this.version=\"$RELEASE_VERSION\""
           npm publish --provenance --access public --no-git-checks --tag $TAG
           PACKAGE_URL="https://www.npmjs.com/package/$PACKAGE_NAME/v/$RELEASE_VERSION"
           if [[ $GITHUB_EVENT_NAME == 'push' ]]; then
