--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -55,7 +55,7 @@ jobs:
             HAS_TAG=$(echo $PACKAGE_VERSION | grep -o '[a-zA-Z]*' | head -n 1)
             TAG=$([[ -n "$HAS_TAG" ]] && echo $HAS_TAG || echo "latest")
           else
-            TAG="canary"
+            TAG=$([[ $GITHUB_EVENT_NAME == 'issue_comment' ]] && echo "pr" || echo "canary")
             RELEASE_VERSION=$(bunx semver $LATEST_VERSION -i minor)
             TAGGED_VERSION=$(echo $VERSIONS | bunx json $TAG)
             RELEASE_VERSION=$([[ $TAGGED_VERSION == $RELEASE_VERSION* ]] && bunx semver $TAGGED_VERSION -i prerelease || echo $RELEASE_VERSION-$TAG.0)
