chore: tweaks to dependencies.yml ~ 1 file 2+ 1-
.github/workflows/dependencies.yml

--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -30,4 +30,5 @@ jobs:
           git config user.email 'github-actions[bot]@users.noreply.github.com'
           git add .
           git commit -m "chore(deps): update dependencies"
-          git push
+          git push -u origin HEAD:refs/heads/update-dependencies
+          gh pr create --title "chore(deps): update dependencies" --body "This PR updates the dependencies to their latest versions." --head update-dependencies --base main
