--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -32,6 +32,7 @@ jobs:
           bun update
           git config user.name 'github-actions[bot]'
           git config user.email 'github-actions[bot]@users.noreply.github.com'
+          git pull origin main
           git checkout -b update-dependencies
           git add .
           git commit -m "chore(deps): update dependencies"
