--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           git config user.name 'github-actions[bot]'
           git config user.email 'github-actions[bot]@users.noreply.github.com'
-          git checkout -b update-dependencies
+          git checkout update-dependencies || git checkout -b update-dependencies
           bun update
           git add .
           git commit -m "chore(deps): update dependencies"
