--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -31,7 +31,8 @@ jobs:
         run: |
           git config user.name 'github-actions[bot]'
           git config user.email 'github-actions[bot]@users.noreply.github.com'
-          git checkout update-dependencies || git checkout -b update-dependencies
+          git branch -D update-dependencies
+          git checkout -b update-dependencies
           bun update
           git add .
           git commit -m "chore(deps): update dependencies" || exit 0
