--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           git config user.name 'github-actions[bot]'
           git config user.email 'github-actions[bot]@users.noreply.github.com'
-          git branch -D update-dependencies
+          git branch -D update-dependencies || true
           git checkout -b update-dependencies
           bun update
           git add .
