--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -33,6 +33,7 @@ jobs:
           git config user.email 'github-actions[bot]@users.noreply.github.com'
           git branch -D update-dependencies || true
           git checkout -b update-dependencies
+          git pull origin main
           bun update
           git add .
           git commit -m "chore(deps): update dependencies" || exit 0
