--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -36,6 +36,7 @@ jobs:
           bun update
           git add .
           git commit -m "chore(deps): update dependencies" || true
+          git pull --rebase origin update-dependencies
           git push origin update-dependencies
           curl -sL -X POST -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/$GITHUB_REPOSITORY/pulls" \
             -d "{\"title\":\"chore(deps): update dependencies\",\"head\":\"update-dependencies\",\"base\":\"main\"}"
