chore: tweaks to dependencies.yml ~ 1 file 5+ 5-
.github/workflows/dependencies.yml

--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -31,12 +31,12 @@ jobs:
         run: |
           git config user.name 'github-actions[bot]'
           git config user.email 'github-actions[bot]@users.noreply.github.com'
-          git checkout update-dependencies || git checkout -b update-dependencies
-          git pull origin main --rebase
+          git checkout main
+          git pull origin main
+          git checkout -B update-dependencies
           bun update
-          git add .
+          git add package.json bun.lock
           git commit -m "chore(deps): update dependencies" || true
-          git pull --rebase origin update-dependencies
-          git push origin update-dependencies
+          git push -u origin update-dependencies
           curl -sL -X POST -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/$GITHUB_REPOSITORY/pulls" \
             -d "{\"title\":\"chore(deps): update dependencies\",\"head\":\"update-dependencies\",\"base\":\"main\"}"
